update pin
